--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 node_modules
 ddragon
-config.json
-start.bat# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+start.bat
+
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
 /node_modules
@@ -24,3 +25,4 @@ start.bat# See https://help.github.com/articles/ignoring-files/ for more about i
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+src/config.js
