--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "sass": "^1.43.4",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "electron-is-dev": "^2.0.0"
   },
+  "homepage": "./",
   "main": "public/electron.js",
   "scripts": {
     "start": "react-scripts start",
@@ -19,7 +21,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "dev": "concurrently \"SET BROWSER=none&&npm run start\" \"wait-on http://localhost:3000 && electron ./public/electron.js\"",
-    "electron": "wait-on tcp:3000 && electron ."
+    "electron": "wait-on tcp:3000 && electron .",
+    "make": "react-scripts build && electron-forge make",
+    "package": "electron-builder build --win -c.extraMetadata.main=build/electron.js --publish never"
   },
   "eslintConfig": {
     "extends": [
@@ -42,7 +46,9 @@
   "devDependencies": {
     "concurrently": "^6.3.0",
     "electron": "^15.3.0",
+    "electron-builder": "^22.13.1",
     "electron-is-dev": "^2.0.0",
+    "electron-prebuilt-compile": "8.2.0",
     "wait-on": "^6.0.0"
   }
 }
