--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "electron-is-dev": "^2.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "sass": "^1.43.4",
-    "web-vitals": "^1.0.1",
-    "electron-is-dev": "^2.0.0"
+    "web-vitals": "^1.0.1"
   },
   "homepage": "./",
   "main": "public/electron.js",
@@ -47,8 +47,10 @@
     "concurrently": "^6.3.0",
     "electron": "^15.3.0",
     "electron-builder": "^22.13.1",
+    "electron-devtools-installer": "^3.2.0",
     "electron-is-dev": "^2.0.0",
     "electron-prebuilt-compile": "8.2.0",
+    "electron-react-devtools": "^0.5.3",
     "wait-on": "^6.0.0"
   }
 }
