--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "jsx-a11y/alt-text": "off"
+    }
   },
   "browserslist": {
     "production": [
